# osstriage

./: .env.example  .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: osstriage-ci.yml
src/osstriage/: __init__.py  cli.py  github_client.py
src/osstriage/core/: __init__.py  config.py  exceptions.py  logging.py
src/osstriage/dspy_modules/: __init__.py  review_pr.py  signatures.py  triage_issue.py
tests/: __init__.py
